# contextgraph

./: .gitignore  Cargo.toml  package.json
agents/: architect.yaml  coder.yaml  (+3 more)
crates/context-graph-causal-agent/: Cargo.toml
crates/context-graph-causal-agent/examples/: benchmark_causal.rs  benchmark_causal_enhanced.rs  benchmark_causal_large.rs  test_llm.rs
crates/context-graph-causal-agent/src/: error.rs  lib.rs
crates/context-graph-causal-agent/src/activator/: mod.rs
crates/context-graph-causal-agent/src/llm/: mod.rs  prompt.rs
crates/context-graph-causal-agent/src/scanner/: mod.rs
crates/context-graph-causal-agent/src/service/: mod.rs
crates/context-graph-causal-agent/src/types/: mod.rs
crates/context-graph-causal-agent/tests/: background_loop_integration.rs
crates/context-graph-embeddings/: Cargo.toml
crates/context-graph-embeddings/src/: config.rs  error.rs  global_provider.rs  lib.rs  provider.rs  stub.rs
crates/context-graph-embeddings/src/batch/processor/: submit.rs  worker.rs
crates/context-graph-embeddings/src/batch/types/: tests.rs
crates/context-graph-embeddings/src/cache/: manager.rs  mod.rs  types.rs
crates/context-graph-embeddings/src/config/: cache.rs  gpu.rs  mod.rs  models.rs
crates/context-graph-embeddings/src/error/: tests_extended.rs  types.rs
crates/context-graph-embeddings/src/fusion/: experts.rs  gating.rs  mod.rs
crates/context-graph-embeddings/src/gpu/: mod.rs
crates/context-graph-embeddings/src/gpu/device/: utils.rs
crates/context-graph-embeddings/src/gpu/memory/: slots.rs
crates/context-graph-embeddings/src/gpu/model_loader/: loader.rs  mod.rs  unified.rs
crates/context-graph-embeddings/src/models/: mod.rs
crates/context-graph-embeddings/src/models/attention/: sliding_window.rs  tiled.rs
crates/context-graph-embeddings/src/models/factory/: default_factory.rs  mod.rs  trait_impl.rs
crates/context-graph-embeddings/src/models/memory_tracker/: core.rs
crates/context-graph-embeddings/src/models/pretrained/: mod.rs
crates/context-graph-embeddings/src/models/registry/: core.rs  loader.rs  operations.rs  tests.rs  tests_concurrent.rs  tests_mov.rs  tests_stats.rs  tests_unload.rs
crates/context-graph-embeddings/src/provider/: fused.rs  mod.rs  multi_array.rs
crates/context-graph-embeddings/src/quantization/: edge_case_verification.rs  float8.rs  router.rs  types.rs
crates/context-graph-embeddings/src/storage/: batch.rs  binary.rs  full_state_verification.rs  gds.rs  mod.rs  multi_space.rs
crates/context-graph-embeddings/src/training/: data.rs  evaluation.rs  lora.rs  loss.rs  mod.rs  multitask.rs  optimizer.rs  pipeline.rs  trainer.rs
crates/context-graph-embeddings/src/types/: dimensions.rs  fused.rs  input.rs  mod.rs
crates/context-graph-embeddings/src/warm/: cuda_alloc.rs  diagnostics.rs  integration.rs  loader.rs  memory_pool.rs  mod.rs  registry.rs  tests.rs  validation.rs
crates/context-graph-embeddings/tests/: attention_strategy_tests.rs  benchmark_test.rs  dimension_test.rs  gpu_memory_slots_test.rs  no_fake_data_test.rs  qodo_embed_integration.rs  search_test.rs  storage_roundtrip_test.rs  ws_embeddings_verification.rs
crates/context-graph-embeddings/tests/dimension_test/: aggregate_dimensions.rs  comprehensive.rs  constants.rs  edge_cases.rs  main.rs  model_metadata.rs  native_dimensions.rs  offsets.rs  projected_dimensions.rs  quantization_methods.rs
crates/context-graph-embeddings/tests/storage_roundtrip_test/: comprehensive_validation.rs  edge_cases.rs  fingerprint_creation.rs  helpers.rs  main.rs  query_result.rs  rrf_formula.rs  serialization_roundtrip.rs
crates/context-graph-mcp/: Cargo.toml
crates/context-graph-mcp/src/: handlers.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs  weights.rs
crates/context-graph-mcp/src/adapters/: causal_hint.rs  embedding_adapter.rs  lazy_provider.rs  mod.rs
crates/context-graph-mcp/src/gpu_clustering/: gpu_hdbscan_adapter.rs
crates/context-graph-mcp/src/handlers/: atc.rs  autonomous.rs  causal.rs  core.rs  dream.rs  gwt_providers.rs  kuramoto_stepper.rs  lifecycle.rs  memory.rs  merge.rs  mod.rs  purpose.rs  search.rs  steering.rs  system.rs  tools.rs  utl.rs
crates/context-graph-mcp/src/middleware/: mod.rs  validation.rs
crates/context-graph-mcp/src/server/: mod.rs  transport.rs  watchers.rs
crates/context-graph-mcp/src/tools/: aliases.rs  mod.rs  names.rs  registry.rs
crates/context-graph-mcp/src/transport/: mod.rs  sse.rs
crates/context-graph-mcp/tests/: graph_linking_integration.rs
crates/context-graph-storage/: Cargo.toml  README.md
crates/context-graph-storage/benches/: maxsim_bench.rs
crates/context-graph-storage/examples/: basic_storage.rs  marblestone_edges.rs
crates/context-graph-storage/src/: column_families.rs  indexes.rs  lib.rs  memex.rs  rocksdb_backend.rs  serialization.rs
crates/context-graph-storage/src/code/: error.rs  store.rs
crates/context-graph-storage/src/graph_edges/: builder.rs  repository.rs
crates/context-graph-storage/src/rocksdb_backend/: config.rs  core.rs  edge_ops.rs  embedding_ops.rs  error.rs  helpers.rs  index_ops.rs  memex_impl.rs  memory_provider.rs  mod.rs  tests_edge_scan.rs  tests_index.rs
crates/context-graph-storage/src/teleological/: column_families.rs  mod.rs  rocksdb_store.rs  schema.rs  serialization.rs  tests.rs
crates/context-graph-storage/tests/: autonomous_integration.rs  e12_e13_source_of_truth_verification.rs  full_integration_real_data.rs  full_state_verification.rs  purpose_vector_integration.rs  teleological_integration.rs
crates/context-graph-storage/tests/full_integration_real_data/: helpers.rs  main.rs  operations_tests.rs  performance_tests.rs  pipeline_tests.rs  roundtrip_tests.rs  search_tests.rs
crates/context-graph-storage/tests/full_state_verification/: column_family_tests.rs  edge_case_tests.rs  helpers.rs  main.rs  persistence_tests.rs  write_read_tests.rs
crates/context-graph-storage/tests/storage_integration/: edge_crud.rs
(+1558 files in other folders)
