[package]
name = "context-graph-causal-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Causal relationship discovery agent using local LLM"

[features]
default = []
# Enable CUDA acceleration via Candle (RTX 5090 optimized)
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true

# Internal crates
context-graph-core = { path = "../context-graph-core" }
context-graph-storage = { path = "../context-graph-storage" }
context-graph-embeddings = { path = "../context-graph-embeddings" }

# Candle for native CUDA inference (RTX 5090 Blackwell optimized)
# Uses FP16/BF16 with tensor cores, INT8/FP8 quantization supported
candle-core = { version = "0.9.2-alpha" }
candle-nn = { version = "0.9.2-alpha" }
candle-transformers = { version = "0.9.2-alpha" }

# Model downloading from HuggingFace
hf-hub = "0.3"

# Tokenizer
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Async utilities
futures = "0.3"
parking_lot = "0.12"

# Regex for fallback parsing
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tracing-subscriber = "0.3"
