[package]
name = "context-graph-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Context Graph Team"]
description = "MCP JSON-RPC server for Context Graph"
license = "MIT"
repository = "https://github.com/contextgraph/contextgraph"
keywords = ["mcp", "jsonrpc", "server", "context-graph"]

[[bin]]
name = "context-graph-mcp"
path = "src/main.rs"

[dependencies]
context-graph-core = { path = "../context-graph-core" }
context-graph-cuda = { path = "../context-graph-cuda" }
context-graph-embeddings = { path = "../context-graph-embeddings" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Configuration
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[features]
default = ["stub"]
stub = ["context-graph-cuda/stub", "context-graph-embeddings/stub"]
cuda = ["context-graph-cuda/cuda"]
