[package]
name = "context-graph-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer for Context Graph with RocksDB backend"
license = "MIT"

[dependencies]
context-graph-core = { path = "../context-graph-core" }
# GPU required per constitution (stack.gpu, AP-007)
context-graph-embeddings = { path = "../context-graph-embeddings", features = ["candle", "cuda"] }
rocksdb = "0.22"
bincode = "1.3"
rmp-serde = "1.1"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["sync", "rt-multi-thread", "macros"] }
async-trait = "0.1"
tracing = "0.1"

[features]
# GPU is REQUIRED for production. Constitution Reference: stack.gpu, AP-007
default = ["cuda"]
cuda = ["context-graph-embeddings/cuda"]

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"
futures = "0.3"
# Enable test-utils for stubs access in tests (AP-007 compliant)
context-graph-core = { path = "../context-graph-core", features = ["test-utils"] }

[[example]]
name = "basic_storage"
path = "examples/basic_storage.rs"

[[example]]
name = "marblestone_edges"
path = "examples/marblestone_edges.rs"
